--- a/inst/doc/dataRetrieval.Rnw
+++ b/inst/doc/dataRetrieval.Rnw
@@ -360,7 +360,6 @@ startDate <- "1964-01-01"
 endDate <- "2013-01-01"
 
 Daily <- getDVData(siteNumber, "00060", startDate, endDate,interactive=FALSE)
-summary(Daily)
 @
 
 Details of the Daily dataframe are listed below:
@@ -368,9 +367,10 @@ Details of the Daily dataframe are listed below:
 <<label=colNamesDaily, echo=FALSE,results=tex>>=
 ColumnName <- c("Date", "Q", "Julian","Month","Day","DecYear","MonthSeq","Qualifier","i","LogQ","Q7","Q30")
 Type <- c("Date", "number", "number","integer","integer","number","integer","string","integer","number","number","number")
-Description <- c("Date", "Discharge in cms", "Number of days since January 1, 1850", "Month of the year [1-12]", "Day of the year [1-366]", "Decimal year", "Number of months since January 1, 1850", "Qualifing code", "Index", "Natural logarithm of Q", "7 day running average of Q", "30 running average of Q")
+Description <- c("Date", "Discharge in cms", "Number of days since January 1, 1850", "Month of the year [1-12]", "Day of the year [1-366]", "Decimal year", "Number of months since January 1, 1850", "Qualifing code", "Index of days from the start of the data frame", "Natural logarithm of Q", "7 day running average of Q", "30 running average of Q")
+Units <- c("date", "cms","days", "months","days","years","months", "character","days","numeric","cms","cms")
 
-DF <- data.frame(ColumnName,Type,Description)
+DF <- data.frame(ColumnName,Type,Description,Units)
 
 data.table <- xtable(DF,
                      caption="Daily dataframe")
@@ -388,7 +388,6 @@ The function to obtain sample data from the water quality portal is getSampleDat
 <<secondExample>>=
 Sample <-getSampleData(siteNumber,parameterCd,
       startDate, endDate,interactive=FALSE)
-summary(Sample)
 @
 
 Details of the Sample dataframe are listed below:
@@ -396,14 +395,18 @@ Details of the Sample dataframe are listed below:
 <<label=colNamesQW, echo=FALSE,results=tex>>=
 ColumnName <- c("Date", "ConcLow", "ConcHigh", "Uncen", "ConcAve", "Julian","Month","Day","DecYear","MonthSeq","SinDY","CosDY","Q","LogQ")
 Type <- c("Date", "number","number","integer","number", "number","integer","integer","number","integer","number","number","number","number")
-Description <- c("Date", "Lower limit of concentration", "Upper limit of concentration", "Uncensored data (1=true, 0=false)", "Average concentration","Number of days since January 1, 1850", "Month of the year [1-12]", "Day of the year [1-366]", "Decimal year", "Number of months since January 1, 1850", "Sine of ...", "Cosine of ...", "Discharge in cms", "Natural logarithm of flow")
+Description <- c("Date", "Lower limit of concentration", "Upper limit of concentration", "Uncensored data (1=true, 0=false)", "Average concentration","Number of days since January 1, 1850", "Month of the year [1-12]", "Day of the year [1-366]", "Decimal year", "Number of months since January 1, 1850", "Sine of DecYear", "Cosine of DecYear", "Discharge **", "Natural logarithm of flow **")
+Units <- c("date","mg/L","mg/L","integer","mg/L","days","months","days","years","months","numeric","numeric","cms", "numeric")
 
-DF <- data.frame(ColumnName,Type,Description)
+DF <- data.frame(ColumnName,Type,Description,Units)
 
 data.table <- xtable(DF,
                      caption="Sample dataframe")
 print(data.table, caption.placement="top",floating="FALSE",latex.environments=NULL)
 @
+\\
+** Flow columns are populated from data in the Daily dataframe after calling the mergeReport function.
+
 
 In a more complex situation, the Sample data frame will combine all of the measured parameters.  An example is provided to explain how the values are combined:
 
